too many fixes and indent